Archive2/4f/5c9efd33085cdd/output
main.cpp:17:26: error: expected '(' for function-style cast or type construction
    float f = pi_t<float>;
              ~~~~~~~~~~~^
1 error generated.
